# RiemannOpt

./: .gitignore  CLAUDE.md  CORE_IMPROVEMENTS_ROADMAP.md  CORE_PHASE1_2_SUMMARY.md  Cargo.toml  LICENSE  README.md  pyproject.toml  test_manifolds.rs  test_parallel_transport.py
crates/riemannopt/: Cargo.toml  README.md
crates/riemannopt-autodiff/: Cargo.toml  README.md
crates/riemannopt-autodiff/benches/: autodiff_bench.rs
crates/riemannopt-autodiff/src/: backward.rs  broadcast.rs  buffer_pool.rs  cost_function.rs  dual.rs  graph.rs  integration.rs  lib.rs  manifold_ops.rs  ops.rs  pool.rs  problem.rs  session.rs  tape.rs  value.rs  var.rs
crates/riemannopt-autodiff/tests/: autodiff_tests.rs  manifold_integration.rs
crates/riemannopt-core/: Cargo.toml  README.md
crates/riemannopt-core/benches/: algorithm_comparison.rs  baseline_comparison.rs  batch_ops_performance.rs  end_to_end.rs  manifold_operations.rs  memory_profile.rs  parallel_gradient.rs  retraction_benchmarks.rs  simd_benchmarks.rs  solver_bench.rs  tangent_operations.rs
crates/riemannopt-core/examples/: backend_selection.rs  cached_optimization.rs  parallel_optimization.rs  simple_optimization.rs  specialized_ops.rs
crates/riemannopt-core/src/: cost_function.rs  error.rs  lib.rs  line_search.rs  manifold.rs  metric.rs  optimizer.rs  optimizer_state.rs  parallel.rs  preconditioner.rs  simd.rs  step_size.rs  tangent.rs  test_utils.rs  types.rs
crates/riemannopt-core/src/compute/: backend.rs  mod.rs
crates/riemannopt-core/src/config/: features.rs  mod.rs
crates/riemannopt-core/src/core/: cached_cost_function.rs  cached_cost_function_dyn.rs  cost_function.rs  cost_function_simd.rs  cost_function_workspace.rs  error.rs  manifold.rs  matrix_manifold.rs  mod.rs  traits.rs  types.rs
crates/riemannopt-core/src/gpu/: cuda.rs  kernels.rs  memory.rs  mod.rs
crates/riemannopt-core/src/linalg/: faer_backend.rs  mod.rs  nalgebra_backend.rs  parallel_policy.rs  traits.rs  types.rs
crates/riemannopt-core/src/manifold/: euclidean.rs  fixed_rank.rs  grassmann.rs  hyperbolic.rs  mod.rs  oblique.rs  product.rs  psd_cone.rs  spd.rs  sphere.rs  stiefel.rs  utils.rs
crates/riemannopt-core/src/manifold_ops/: fisher.rs  metric.rs  metric_simd.rs  metric_workspace.rs  mod.rs  retraction.rs  retraction_workspace.rs  tangent.rs  tangent_simd.rs  tangent_workspace.rs
crates/riemannopt-core/src/memory/: cache.rs  mod.rs  pool.rs  workspace.rs
crates/riemannopt-core/src/numerical/: mod.rs  stability.rs  validation.rs
crates/riemannopt-core/src/optimization/: callback.rs  line_search.rs  mod.rs  optimizer.rs  optimizer_state.rs  optimizer_workspace.rs  preconditioner.rs  step_size.rs  workspace.rs
crates/riemannopt-core/src/preconditioner/: identity.rs  jacobi.rs  lbfgs.rs  mod.rs
crates/riemannopt-core/src/problem/: euclidean.rs  fixed_rank.rs  grassmann.rs  hyperbolic.rs  mod.rs  oblique.rs  product.rs  psd_cone.rs  spd.rs  sphere.rs  stiefel.rs
crates/riemannopt-core/src/profiling/: auto_tuner.rs  metrics.rs  mod.rs
crates/riemannopt-core/src/simd/: dispatch.rs  mod.rs  ops.rs  wide_backend.rs
crates/riemannopt-core/src/solver/: adam.rs  conjugate_gradient.rs  lbfgs.rs  mod.rs  natural_gradient.rs  newton.rs  sgd.rs  trust_region.rs
crates/riemannopt-core/src/utils/: mod.rs  parallel_thresholds.rs  test_helpers.rs  test_manifolds.rs  test_utils.rs
crates/riemannopt-core/tests/: e2e_tests.rs  test_basic_integration.rs  test_cost_functions.rs  test_memory_management.rs  test_metric_properties.rs  test_numerical_validation.rs  test_optimizer_properties.rs  test_parallel_transport.rs  test_retraction_properties.rs  test_simd_operations.rs  test_simple_integration.rs  test_tangent_projection.rs  test_zero_allocation.rs  zero_allocation_verification.rs
crates/riemannopt-manifolds/: Cargo.toml  README.md
crates/riemannopt-manifolds/benches/: manifold_operations.rs
crates/riemannopt-manifolds/src/: euclidean.rs  fixed_rank.rs  grassmann.rs  grassmann_matrix.rs  hyperbolic.rs  lib.rs  matrix_manifold.rs  oblique.rs  oblique_matrix.rs  product.rs  product_static.rs  psd_cone.rs  spd.rs  spd_matrix.rs  sphere.rs  sphere_simd.rs  stiefel.rs  stiefel_matrix.rs  stiefel_small.rs  utils.rs
crates/riemannopt-manifolds/tests/: euclidean_tests.rs  grassmann_tests.rs  hyperbolic_tests.rs  integration_tests.rs  oblique_tests.rs  performance_tests.rs  spd_tests.rs  sphere_tests.rs  stiefel_tests.rs
crates/riemannopt-optim/: Cargo.toml  README.md
crates/riemannopt-optim/benches/: optimizer_comparison.rs
crates/riemannopt-optim/src/: adam.rs  conjugate_gradient.rs  lbfgs.rs  lib.rs  natural_gradient.rs  newton.rs  parallel_sgd.rs  sgd.rs  trust_region.rs  utils.rs
crates/riemannopt-optim/tests/: adam_test.rs  conjugate_gradient_test.rs  debug_cg_test.rs  integration_tests.rs  lbfgs_test.rs  optimizer_tests.rs  performance_tests.rs  sgd_test.rs  trust_region_test.rs  validation_tests.rs
crates/riemannopt-py/: Cargo.toml  Makefile  README.md  generate_stubs.py  pyproject.toml  pytest.ini  run_tests.py  setup.cfg  test_adam_debug.py  test_array_conversion.py  test_direct_manifold.py  test_flatten_order.py  test_riemannopt.py  test_stiefel_retraction.py
crates/riemannopt-py/examples/: simple_test.py  test_all_optimizers.py  test_sgd.py
crates/riemannopt-py/examples/basic/: test_basic.py
crates/riemannopt-py/python/riemannopt/: __init__.py  __init__.pyi  _compat.py  _riemannopt.pyi  _version.py  callbacks.py  decorators.py  exceptions.py  helpers.py  integrations.py  manifolds.py  types.py  (+6 more)
crates/riemannopt-py/src/: array_utils.rs  autodiff.rs  callback_manager.rs  callbacks.rs  convert.rs  cost_function.rs  dispatch.rs  error.rs  lib.rs  manifold.rs  manifolds.rs  manifolds_fixed_rank.rs  manifolds_oblique.rs  manifolds_optimized.rs  manifolds_psd_cone.rs  native_cost.rs  optimizers.rs  optimizers_newton.rs  preconditioner.rs  problem.rs  py_cost.rs  result.rs  solver.rs  stopping.rs  types.rs  utils.rs  validation.rs
crates/riemannopt-py/tests/: __init__.py  conftest.py
crates/riemannopt/src/: lib.rs
(+106 files in other folders)
