[project]
name = "riemannopt-workspace"
version = "0.1.0"
description = "RiemannOpt workspace"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=5.0",
    "ruff>=0.9",
    "numpy>=1.24",
]
bench = [
    "pymanopt>=2.2",
    "geoopt>=0.5",
    "torch>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[tool.uv]

[tool.uv.workspace]
members = ["crates/riemannopt-py"]

[tool.uv.sources]
riemannopt = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: benchmark tests (run with '-m benchmark')",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
