[package]
name = "riemannopt-autodiff"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/riemannopt-autodiff"
description = "Automatic differentiation for Riemannian optimization"

[dependencies]
riemannopt-core = { path = "../riemannopt-core", version = "0.1.0" }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["std"]
std = ["riemannopt-core/std"]

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
riemannopt-manifolds = { path = "../riemannopt-manifolds", version = "0.1.0" }