[package]
name = "riemannopt-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/riemannopt-core"
description = "Core traits and types for Riemannian optimization"

[dependencies]
nalgebra = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }
serde = { workspace = true, optional = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
wide = { workspace = true }
cudarc = { workspace = true, optional = true }
cust = { workspace = true, optional = true }
faer = { version = "0.24", optional = true }
parking_lot = "0.12"
dashmap = "6.1"
lru = "0.16"

[features]
default = ["std", "serde", "parallel", "faer-backend"]
std = []
serde = ["dep:serde", "nalgebra/serde-serialize"]
test-utils = []
cuda = ["dep:cudarc", "dep:cust"]
nalgebra-backend = []
faer-backend = ["dep:faer"]
parallel = []

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }
