[package]
name = "riemannopt-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for RiemannOpt"

[lib]
name = "riemannopt"
crate-type = ["cdylib"]

[dependencies]
riemannopt = { path = "../riemannopt", version = "0.1.0", features = ["full"] }
riemannopt-core = { path = "../riemannopt-core", version = "0.1.0" }
riemannopt-manifolds = { path = "../riemannopt-manifolds", version = "0.1.0" }
riemannopt-optim = { path = "../riemannopt-optim", version = "0.1.0" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
numpy = "0.24"
rand = { workspace = true }
rand_distr = { workspace = true }
parking_lot = "0.12"

[features]
default = ["pyo3/extension-module"]