[package]
name = "riemannopt-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for RiemannOpt"

[lib]
name = "riemannopt"
crate-type = ["cdylib"]

[dependencies]
riemannopt-core = { path = "../riemannopt-core", features = ["faer-backend"] }
riemannopt-autodiff = { path = "../riemannopt-autodiff" }
pyo3 = { workspace = true, features = ["extension-module"] }
numpy = { workspace = true }

[lints.rust]
# Python bindings require unsafe for PyArray::as_array_mut etc.
unsafe_code = "allow"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# PyO3 generates code that triggers these
needless_pass_by_value = "allow"
unused_self = "allow"
too_many_arguments = "allow"
