[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "riemannopt"
version = "0.1.0"
description = "High-performance Riemannian optimization library"
readme = "README.md"
authors = [
    {name = "Denis Chaput", email = "denis.chaput77@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.3",
    "sphinx-autodoc-typehints>=1.24",
]

[project.urls]
Homepage = "https://github.com/DenisChpt/RiemannOpt"
Documentation = "https://riemannopt.readthedocs.io"
Repository = "https://github.com/DenisChpt/RiemannOpt"
Issues = "https://github.com/DenisChpt/RiemannOpt/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "riemannopt._riemannopt"