[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "riemannopt"
version = "0.1.0"
description = "High-performance Riemannian optimization library"
readme = "../../README.md"
authors = [
    {name = "Denis Chaput", email = "denis.chaput77@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/DenisChpt/RiemannOpt"
Documentation = "https://docs.rs/riemannopt"
Repository = "https://github.com/DenisChpt/RiemannOpt"
Issues = "https://github.com/DenisChpt/RiemannOpt/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "riemannopt._riemannopt"
include = [
    { path = "python/riemannopt/py.typed", format = "sdist" },
    { path = "python/riemannopt/_riemannopt.pyi", format = "sdist" },
]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["numpy.mypy_plugin"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
