[metadata]
name = riemannopt
author = Denis Chaput
author_email = denis.chaput77@gmail.com
description = High-performance Riemannian optimization in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DenisChpt/RiemannOpt
project_urls =
    Documentation = https://riemannopt.readthedocs.io
    Source = https://github.com/DenisChpt/RiemannOpt
    Tracker = https://github.com/DenisChpt/RiemannOpt/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Rust
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    numpy >= 1.20.0
    typing_extensions >= 4.0.0; python_version < "3.10"

[options.extras_require]
dev =
    pytest >= 7.0.0
    pytest-cov >= 4.0.0
    pytest-benchmark >= 4.0.0
    mypy >= 1.0.0
    ruff >= 0.1.0
    black >= 23.0.0
    isort >= 5.0.0
    pre-commit >= 3.0.0
    tox >= 4.0.0
test =
    pytest >= 7.0.0
    pytest-cov >= 4.0.0
    pytest-benchmark >= 4.0.0
    hypothesis >= 6.0.0
docs =
    sphinx >= 6.0.0
    sphinx-rtd-theme >= 1.3.0
    sphinx-autodoc-typehints >= 1.23.0
    nbsphinx >= 0.9.0
    matplotlib >= 3.5.0
viz =
    matplotlib >= 3.5.0
    seaborn >= 0.12.0
torch =
    torch >= 1.10.0
jax =
    jax >= 0.4.0
    jaxlib >= 0.4.0
all =
    %(dev)s
    %(docs)s
    %(viz)s

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -ra
    --strict-markers
    --ignore=docs
    --doctest-modules
    --doctest-glob="*.md"
    --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    benchmark: marks tests as benchmarks
    gpu: marks tests that require GPU
    visualization: marks tests that require matplotlib
    torch: marks tests that require PyTorch
    jax: marks tests that require JAX

[coverage:run]
branch = True
source = riemannopt

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if TYPE_CHECKING:
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
ignore_missing_imports = True
plugins = numpy.typing.mypy_plugin

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs,build,dist

[ruff]
target-version = "py38"
line-length = 88
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901"]

[ruff.per-file-ignores]
"__init__.py" = ["F401"]